# Chess-Game

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Castle.cpp  Castle.h  Color.h  Empty.cpp  Empty.h  Field.cpp  Field.h  Game.cpp  Game.h  Horse.cpp  Horse.h  King.cpp  King.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  README.md  main.cpp
